# rust-message-storage-service

./: Cargo.toml  README.md  build.rs
proto/: message_storage.proto  message_storage_service.proto
src/: client.rs  lib.rs  server.rs
src/api/grpc/: mod.rs
src/proto/: mod.rs
src/tests/: .mod.rs.pending-snap  mod.rs
