[package]
name = "rust-message-storage-service"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "message-storage-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "message-storage-client"
path = "src/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
prost-types = "0.12"
anyhow = "1.0.79"
tokio-stream =  { version = "0.1", features = ["full"] }
tower = "0.4"
regex = "1.10.3"
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
insta = "1.34.0"
